Closed
Bug 113421
Opened 24 years ago
Closed 24 years ago
Random message dropping during import from Eudora 5.1, Outlook and Outlook Express
Categories
(MailNews Core :: Profile Migration, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.9
People
(Reporter: mandoric, Assigned: cavin)
References
Details
Attachments
(1 file)
|
946 bytes,
patch
|
naving
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
Whenever I try importing my Eudora 5.1 mail database using the 2001-11-01 build,
what messages are actually imported appears to be random, and imported messages
only appear after running a search that finds them. (Ex: After importing I see
nothing. After running a search like "Subject does not contain
egluilheipiljsdvgjilsd" some messages turn up, but not all.) However, accurate
message count numbers do appear in the first Import dialog box.
Comment 1•24 years ago
|
||
Trunk build 2001-12-03-03: WinMe
I see similar problems but not the same.
The first time I import (Eudora, Outlook Express or Outlook), the Import Summary
page states the folders and number of messages that were imported. After
selecting a folder in the folder pane, no messages display in the thread pane
and the Status Bar states 0 for number of messages.
Workaround: After clicking between various folders (between Eudora, Outlook
Express and Outlook) now the messages appear.
Expected Results: The messages should display the first time a folder is selected.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•24 years ago
|
||
reassigning to Cavin.
Updated•24 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•24 years ago
|
||
< The first time I import (Eudora, Outlook Express or Outlook), the Import
< Summary
< page states the folders and number of messages that were imported. After
< selecting a folder in the folder pane, no messages display in the thread pane
< and the Status Bar states 0 for number of messages.
<
< Workaround: After clicking between various folders (between Eudora, Outlook
< Express and Outlook) now the messages appear.
<
I encountered the same problem yesterday and I'll file a separate bug against it
(as I just figured out how to reproduce it). I moved some msgs from imap folder
'a' to imap folder 'b' and then clicked on 'b' to read those msgs again. I saw
an empty thread pane after the folder was opened. I had to click on some other
folder and then back to see the msgs. This is imap only for me though.
I'm not sure if the problem has been there since (or before) 2001-11-01 but it
sounds like this *could* be the reason why no msgs could be seen (even if
there're msgs in the folder). I would think that the import process itself works
just fine (that's why you could see the imported msgs after switching back to
the folder the second time).
| Assignee | ||
Comment 4•24 years ago
|
||
Created bug 115380 for the empty thread pane problem mentioned above. Adding
dependency link on bug 115380.
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9.9
| Assignee | ||
Comment 6•24 years ago
|
||
Removing dependency on bug 115380 since the problem is not going away after
115380 is verified fixed. Looks like a regression as the 11/13 code works fine.
One thing I noticed is that after import is completed the associated .msf files
for the imported folders are still locked by someone because they can't be
renamed or removed (ie, sharing violation). With 11/13 code base (which works)
the .msf files can be renamed or removed just fine. Maybe this is a good
starting point to fixing the problem.
No longer depends on: 115380
| Assignee | ||
Comment 7•24 years ago
|
||
| Assignee | ||
Comment 8•24 years ago
|
||
The fix is to (force) close the msg db after a folder is imported so that the db
can be re-generated (which causes the folder to be reparsed) later when the
imported folder is re-opened. The patch also fixes the same problem for Outlook
and Outlook Express.
Navin and David, can I get a review from you? Thanks.
| Assignee | ||
Comment 9•24 years ago
|
||
Adding Outlook and Outlook Express to Summary since they have the same problem.
Summary: Random message dropping during import from Eudora 5.1 → Random message dropping during import from Eudora 5.1, Outlook and Outlook Express
Comment 10•24 years ago
|
||
Comment on attachment 67143 [details] [diff] [review]
Proposed fix, v1
sr=bienvenu
Attachment #67143 -
Flags: superreview+
Comment 11•24 years ago
|
||
Comment on attachment 67143 [details] [diff] [review]
Proposed fix, v1
r=naving.
I would delete the msf
file after forceclosed()
but if opening the db
does that then it is ok.
Attachment #67143 -
Flags: review+
| Assignee | ||
Comment 12•24 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 13•24 years ago
|
||
Trunk build 2002-03-01: WinMe
- Eudora: ok.
- Outlook: ok.
- Outlook Express: Waiting for bug# 123804 to be fixed (subfolders appearing as
top level folders).
Depends on: 123804
Comment 14•24 years ago
|
||
Verified Fixed, because the messages are appearing in Outlook Express, the
subfolder structure is just not correct.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•