Fix for bug 113421. Closed the msg db after a folder is imported so that the db can be re-generated when the imported folder is re-opened. r=naving, sr=bienvenu.